packages/errors/tests/helpers/im.mjs
// import * as constants from '@jsonql/constants'
import { NO_ERROR_MSG } from '@jsonql/constants'

console.log(NO_ERROR_MSG)
